--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -1290,8 +1290,11 @@
 	year = {1997},
 	volume = {35},
 	pages = {648--659},
-	number = {3}
+	number = {3},
+	doi = {10.1109/36.581981}
 }
+
+
 @INPROCEEDINGS{frerycuritiba93,
 	author = {Frery, A. C. and Sant'Anna, S. J.},
 	title = {Redu\c c\~ao de Ru\'{\i}do Em Imagens {SAR} Pelo Uso de Filtros Robustos},
@@ -5437,7 +5440,6 @@
 	YEAR = {2019},
 	NUMBER = {24},
 	ARTICLE-NUMBER = {2994},
-	URL = {https://www.mdpi.com/2072-4292/11/24/2994},
 	ISSN = {2072-4292},
 	ABSTRACT = {This paper address unsupervised classification strategies applied to Polarimetric Synthetic Aperture Radar (PolSAR) images. We analyze the performance of complex Wishart distribution, which is a widely used model for multi-look PolSAR images, and the robustness of five stochastic distances (Bhattacharyya, Kullback-Leibler, R&eacute;nyi, Hellinger and Chi-square) between Wishart distributions. Two unsupervised classification strategies were chosen: the Stochastic Clustering (SC) algorithm, which is based on the K-means algorithm but uses stochastic distance as the similarity metric, and the Expectation-Maximization (EM) algorithm for Wishart Mixture Model. With the aim of assessing the performance of all algorithms presented here, we performed a Monte Carlo simulation over a set of simulated PolSAR images. A second experiment was conducted using the study area of Tapaj&oacute;s National Forest and the surrounding area, in Brazilian Amazon Forest. The PolSAR images were obtained by the satellite PALSAR. The results, in both experiments, suggest that the EM algorithm and the SC with Hellinger and the SC with Bhattacharyya distance provide a better classification performance. We also analyze the initialization problem for SC and EM algorithms, and we demonstrate how the initial centroid choice influences the final classification result.},
 	DOI = {10.3390/rs11242994}
@@ -5596,7 +5598,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year  = {2019},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01431161.2019.1569278},	
-	URL = { https://doi.org/10.1080/01431161.2019.1569278},
 	eprint = { 	https://doi.org/10.1080/01431161.2019.1569278},
 }
 @article{Zhang2019,
@@ -5609,7 +5610,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year  = {2019},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/22797254.2019.1579616},	
-	URL = { https://doi.org/10.1080/22797254.2019.1579616},
 	eprint = { 	https://doi.org/10.1080/22797254.2019.1579616}
 }
 @article{Parikh2020,
@@ -5622,7 +5622,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year  = {2020},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/19479832.2019.1655489},	
-	URL = {	https://doi.org/10.1080/19479832.2019.1655489},
 	eprint = { 	https://doi.org/10.1080/19479832.2019.1655489}	
 }
 @ARTICLE{Fernandez2017,
@@ -5633,6 +5632,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={14},
 	number={5},
 	pages={754-758}}
+
 @article{Ebrahimi94,
 	title = {Two measures of sample entropy},
 	journal = {Statistics \& Probability Letters},
@@ -5642,7 +5642,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year = {1994},
 	issn = {0167-7152},
 	doi = {https://doi.org/10.1016/0167-7152(94)90046-9},
-	url = {https://www.sciencedirect.com/science/article/pii/0167715294900469},
 	author = {N. Ebrahimi and K. Pflughoeft and E. S. Soofi}
 }
 @ARTICLE{Ferreira2020,
@@ -5653,6 +5652,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={13},
 	number={},
 	pages={2547-2553}}
+
 @ARTICLE{Frery2012,	
 	author={A. C. Frery and R. J. Cintra and A. D. Nascimento},	
 	journal={IEEE Transactions on Geoscience and Remote Sensing}, 	
@@ -5660,7 +5660,8 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year={2013},	
 	volume={51},	
 	number={6},	
-	pages={3733-3743},}
+	pages={3733-3743}}
+
 @article{AlOmari2016,
 	author = {A. I. Al-Omari},
 	title = {A new measure of entropy of continuous random variable},
@@ -5671,10 +5672,10 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year  = {2016},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/15598608.2016.1217444},	
-	URL = { https://doi.org/10.1080/15598608.2016.1217444},
 	eprint = { 	https://doi.org/10.1080/15598608.2016.1217444}
 	
 }
+
 @article{Beirlant1997,
 	title={Nonparametric entropy estimation. An overview},
 	author={J. Beirlant and E. J. Dudewicz and L. Gy{\"o}rfi and I. Denes},
@@ -5701,12 +5702,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	pages = {490-530},
 	year = {2005},
 	doi = {10.1137/040616024},
-	URL = { 
-		https://doi.org/10.1137/040616024
-	},
-	eprint = { 
-		https://doi.org/10.1137/040616024
-	}
+	eprint = {https://doi.org/10.1137/040616024}
 }
 @inproceedings{Puig2003,
 	author    = {D. Puig and M. A. Garc\'ia},
@@ -5818,7 +5814,6 @@ year = {1997},
 note = {Spaceborne Imaging Radar Mission},
 issn = {0034-4257},
 doi = {https://doi.org/10.1016/S0034-4257(96)00148-4},
-url = {https://www.sciencedirect.com/science/article/pii/S0034425796001484},
 author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 }
 @Book{Chen20015,
@@ -5840,7 +5835,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year = {1981},
 	issn = {0146-664X},
 	doi = {https://doi.org/10.1016/S0146-664X(81)80005-6},
-	url = {https://www.sciencedirect.com/science/article/pii/S0146664X81800056},
 	author = {J. Lee},
 }
 @article{Correa95,
@@ -5853,20 +5847,12 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year  = {1995},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/03610929508831626},
-	
-	URL = { 
-	https://doi.org/10.1080/03610929508831626
-	
-	},
-	eprint = { 
-	https://doi.org/10.1080/03610929508831626
-	
+	eprint = {https://doi.org/10.1080/03610929508831626
 	}
 	
 }
 @article{Vasicek76,
 	ISSN = {00359246},
-	URL = {http://www.jstor.org/stable/2984828},
 	author = {O. Vasicek},
 	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
 	number = {1},
@@ -5878,7 +5864,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 }
 @article{VanEs92,
 	ISSN = {03036898, 14679469},
-	URL = {http://www.jstor.org/stable/4616225},
 	abstract = {We consider estimation of functionals of a probability density of the elements of a sample. We discuss a class of statistics based on spacings of increasing order and show that these statistics are almost surely consistent. Special attention is paid to entropy estimation. In particular we derive asymptotic normality in that case. It turns out that the entropy estimator is efficient under certain conditions on the unknown density.},
 	author = {B. van Es},
 	journal = {Scandinavian Journal of Statistics},
@@ -5899,15 +5884,7 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year  = {2013},
 	publisher = {Taylor \& Francis},
 	doi = {10.1080/00949655.2011.637039},
-	
-	URL = { 
-	https://doi.org/10.1080/00949655.2011.637039
-	
-	},
-	eprint = { 
-	https://doi.org/10.1080/00949655.2011.637039
-	
-	}
+	eprint = {https://doi.org/10.1080/00949655.2011.637039}
 	
 }
 @book{CaseBerg01,
@@ -5937,7 +5914,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year = {2014},
 	issn = {0377-0427},
 	doi = {https://doi.org/10.1016/j.cam.2013.10.047},
-	url = {https://www.sciencedirect.com/science/article/pii/S0377042713006006},
 	author = {A. I. Al-Omari},
 	keywords = {Entropy, Root mean square error, Simple random sampling, Ranked set sampling, Double ranked set sampling},
 	abstract = {In this paper, three new entropy estimators of continuous random variables are proposed using simple random sampling (SRS), ranked set sampling (RSS) and double ranked set sampling (DRSS) techniques. The new estimators are obtained by modifying the estimators suggested by Noughabi and Arghami (2010) and Ebrahim et al. (1994). In terms of the root mean square error (RMSEs) and bias values, a numerical comparison is considered to compare the suggested estimators with Vasicek’s (1976) estimator. Our results reveal that the suggested estimators have smaller mean squared error than Vasicek’s estimator. Also, the suggested estimators under double ranked set sampling are more efficient than other suggested estimators based on SRS and RSS.}
@@ -5953,11 +5929,7 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year  = {1999},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/03610919908813564},
-	URL = { 
-	https://doi.org/10.1080/03610919908813564
-	},
-	eprint = { 
-	https://doi.org/10.1080/03610919908813564
+	eprint = {https://doi.org/10.1080/03610919908813564
 	}
 }
 
@@ -5966,8 +5938,7 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	title = {A new estimator of entropy}, 
 	volume = {9}, 
 	number = {1},  
-	abstract ={In this paper we propose an estimator of the entropy of a continuous random variable. The estimator is obtained by modifying the estimator proposed by Vasicek (1976). Consistency of estimator is proved, and comparisons are made with Vasicek’s estimator (1976), van Es’s estimator (1992), Ebrahimi et al.’s estimator (1994) and Correa’s estimator (1995). The results indicate that the proposed estimator has smaller mean squared error than above estimators. },  
-	URL = {http://jirss.irstat.ir/article-1-81-en.html},  
+	abstract ={In this paper we propose an estimator of the entropy of a continuous random variable. The estimator is obtained by modifying the estimator proposed by Vasicek (1976). Consistency of estimator is proved, and comparisons are made with Vasicek’s estimator (1976), van Es’s estimator (1992), Ebrahimi et al.’s estimator (1994) and Correa’s estimator (1995). The results indicate that the proposed estimator has smaller mean squared error than above estimators. },    
 	eprint = {http://jirss.irstat.ir/article-1-81-en.pdf},  
 	journal = {Journal of the Iranian Statistical Society},   
 	doi = {},  
@@ -5984,7 +5955,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year  = {1974},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/03610927408827101},	
-	URL = {https://www.tandfonline.com/doi/abs/10.1080/03610927408827101},
 	eprint = {https://www.tandfonline.com/doi/pdf/10.1080/03610927408827101}	
 }
 
@@ -6031,7 +6001,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	abstract="This chapter describes the Support Vector technique for function estimation problems such as pattern recognition, regression estimation, and solving linear operator equations. It shows that for the Support Vector method both the quality of solution and the complexity of the solution does not depend directly on the dimensionality of an input space. Therefore, on the basis of this technique one can obtain a good estimate using a given number of high-dimensional data.",
 	isbn="978-1-4615-5703-6",
 	doi="10.1007/978-1-4615-5703-6_3",
-	url="https://doi.org/10.1007/978-1-4615-5703-6_3"
 }
 
 @book{Vapnik1995,
@@ -6068,11 +6037,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year  = {2011},
 	publisher = {Taylor & Francis},
 	doi = {10.5589/m11-029},
-	
-	URL = { 
-	https://doi.org/10.5589/m11-029
-	
-	},
 	eprint = { 
 	https://doi.org/10.5589/m11-029
 	
