--- a/Code/CISS2021/Graficos/Figura2.Rmd
+++ b/Code/CISS2021/Graficos/Figura2.Rmd
@@ -15,7 +15,7 @@ library(extrafont)
 
 setwd("C:/Users/Usuario/Google Drive (jacassetti@docentes.unm.edu.ar)/AndreDaiJulia")
 
-source("./Code/CISS2021/Graficos/EntropiaFisherGI0_2par.R")
+source("EntropiaFisherGI0_2par.R")
 getwd()
 ```
 ```{r}
@@ -23,7 +23,7 @@ L=2
 ```
 
 ```{r}
-m_por_sesgoW<-fread("C:/Users/Usuario/Google Drive (jacassetti@docentes.unm.edu.ar)/AndreDaiJulia/Data/CISS2021/Figura2.csv")
+m_por_sesgoW<-fread("../../../Data/CISS2021/Figura2.csv")
 
 ```
 
@@ -36,13 +36,18 @@ g1%>%filter(Estimator=="HVE")
 #g1<- m_por_sesgoW
 
 g1$alfa <- factor(g1$alfa, levels = c("-1.5","-3","-5","-8"),
-                         ordered = TRUE, labels=c(expression(paste(alpha,"=-1.5")),
-                                                  expression(paste(alpha,"=-3")),
-                                                  expression(paste(alpha,"=-5")),
-                                                  expression(paste(alpha,"=-8"))))
-legenda <- c(expression(H[A0[1]]),expression(H[C]),
-             expression(H[ML]),expression(H["NA"]),
-             expression(H[V]),expression(H["VE"]))
+                         ordered = TRUE,
+                  labels=c(expression(alpha==-1.5),
+                  expression(alpha==-3),
+                  expression(alpha==-5),
+                  expression(alpha==-8))
+                  )
+legenda <- c(expression(italic(H)[A0[1]]),
+             expression(italic(H)[C]),
+             expression(italic(H)[ML]),
+             expression(italic(H)["NA"]),
+             expression(italic(H)[V]),
+             expression(italic(H)["VE"]))
 
 plt1<-ggplot(g1,aes(n,Bias,col=Estimator))+
 scale_x_continuous(breaks=c(9,25,49,81,121))+
@@ -51,18 +56,19 @@ geom_point()+
 geom_line()+
 labs(x = "sample size",y=expression(paste(widehat(Bias))))+
 scale_color_discrete(name="Estimator",labels = legenda)+
-theme(text=element_text(size=15,  family="serif"),
+theme(text=element_text(size=12,  family="serif"),
       legend.position = "bottom",
       strip.background =element_rect(fill="white"),
       strip.placement = "outside",
-      strip.text = element_text(size=15),
-      legend.title = element_text(size = 15),
-      legend.text = element_text(size = 15),
+      strip.text = element_text(size=10),
+      legend.title = element_text(size = 10),
+      legend.text = element_text(size = 10),
       panel.background = element_blank(),
       panel.border = element_rect(colour = "black", fill=NA)) +
       guides(colour = guide_legend(nrow = 1))+
 facet_wrap(~alfa, labeller = label_parsed)
 plt1
+ggsave(plot=plt1, file="../../../Figures/CISS2021/Grafico_Hest_Sesgo_mW_L=2ConNeg.pdf", width=12, height=12, units="cm")
 
 plt2<-ggplot(g1,aes(n,MSE,col=Estimator))+
 scale_x_continuous(breaks=c(9,25,49,81,121))+
@@ -71,18 +77,20 @@ geom_point()+
 geom_line()+
 labs(x = "sample size",y=expression(paste(widehat(MSE))))+
 scale_color_discrete(name="Estimator",labels = legenda)+
-theme(text=element_text(size=15,  family="serif"),
+theme(text=element_text(size=12,  family="serif"),
       legend.position = "bottom",
       strip.background =element_rect(fill="white"),
       strip.placement = "outside",
-      strip.text = element_text(size=15),
-      legend.title = element_text(size = 15),
-      legend.text = element_text(size = 15),
+      strip.text = element_text(size=10),
+      legend.title = element_text(size = 10),
+      legend.text = element_text(size = 10),
       panel.background = element_blank(),
       panel.border = element_rect(colour = "black", fill=NA)) +
       guides(colour = guide_legend(nrow = 1))+
 facet_wrap(~alfa, labeller = label_parsed)
 plt2
+ggsave(plot=plt2, file="../../../Figures/CISS2021/Grafico_Hest_ECM_mW_L=2ConNeg.pdf", width=12, height=12, units="cm")
+
 ```
 
 
