Cambios final seccion IV

--- a/Source/Conference/CISS2021/CassettiDelgadinoReyFrery_2.tex
+++ b/Source/Conference/CISS2021/CassettiDelgadinoReyFrery_2.tex
@@ -305,9 +305,7 @@ Van Es~\cite{VanEs92} showed that, under general conditions, \eqref{HVE} converg
 The author also proved the estimator's asymptotic normality when $m, n \to \infty$ and $m = o(n^{1/2})$. 
 Correa~\cite{Correa95}, through a simulated study, showed that his estimator has a smaller mean squared error than Vasiciek's  proposal~\eqref{HV}. 
 
-Al-Omari\cite{AlOmari2014} presented three estimators based on different sampling methods.
-In this paper we studied the simple random sampling one (\textit{SRS})~\eqref{AHE} and second proposal suggested
-in \cite{AlOmari2016}. 
+Al-Omari studied two estimators, the first one is presented in \cite{AlOmari2014} and the second proposal suggested in \cite{AlOmari2016}. The difference between them are the factors $w_i$ and $\nu_i$ corresponding to the first and second estimators respectively.
 The author proved that these estimators converge in probability to $ H[f(x)]$ when $m, n \to \infty  \text{ and } m/n \to 0$. 
 Ebrahimi et al~\cite{Ebrahimi94} presented an estimator adjusting the Vasicek's\cite{Vasicek76} weight. 
 Under the same conditions than Al-Omari\cite{AlOmari2014} the authors proved that $H_{\text{E}}\underset{n \to \infty}{\overset{p}{\longrightarrow}} H[f(x)]$ when $m, n \to \infty  \text{ and } m/n \to 0$. 
